@@ -22920,8 +22920,6 @@ void LivingLifePage::pointerDown( float inX, float inY ) {
 
 
         
-        ourLiveObject->inMotion = true;
-
         
 
         computePathToDest( ourLiveObject );
@@ -23087,6 +23085,10 @@ void LivingLifePage::pointerDown( float inX, float inY ) {
         delete [] message;
 
         // start moving before we hear back from server
+
+        
+        ourLiveObject->inMotion = true;
+
 
 
 
